--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,16 @@ alembic==1.12.0
 email-validator==2.0.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9  # PostgreSQL adapter
+streamlit==1.28.0
+
+# Testing dependencies
+pytest==7.4.3
+pytest-cov==4.1.0
+locust==2.19.1
+httpx==0.25.1  # For async HTTP requests in tests
+freezegun==1.2.2  # For time-based testing
+pytest-mock==3.12.0
+requests-mock==1.11.0
+pytest-asyncio==0.21.1
+pytest-timeout==2.2.0
+coverage==7.3.2
