--- a/pine-time-frontend/package.json
+++ b/pine-time-frontend/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
