--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ email-validator==2.0.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9  # PostgreSQL adapter
 streamlit==1.28.0
+gunicorn==21.2.0  # Added for AWS Elastic Beanstalk deployment
 
 # Testing dependencies
 pytest==7.4.3
