--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -32,8 +32,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: pine-time
-        environment_name: Pine-time-env
+        application_name: pine-time-app
+        environment_name: Pine-time-app-env
         version_label: ${{ github.sha }}
         region: us-east-1  # Change to your region
         deployment_package: deploy.zip
