Replace postgresql-devel with libpq-devel in 01_fastapi.config for Elastic Beanstalk compatibility

--- a/.ebextensions/01_fastapi.config
+++ b/.ebextensions/01_fastapi.config
@@ -12,7 +12,7 @@ option_settings:
 packages:
   yum:
     python3-devel: []
-    postgresql-devel: []
+    libpq-devel: []
     gcc: []
 
 container_commands:
