--- a/pine-time-frontend/package.json
+++ b/pine-time-frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^8.0.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
