--- a/.ebextensions/01_wsgi.config
+++ b/.ebextensions/01_wsgi.config
@@ -1,3 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: app.main:app
+  aws:elasticbeanstalk:application:environment:
+    PYTHONPATH: "/var/app:/var/app/app"
