Update PYTHONPATH in 01_wsgi.config to /var/app for AWS Elastic Beanstalk compatibility

--- a/.ebextensions/01_wsgi.config
+++ b/.ebextensions/01_wsgi.config
@@ -2,4 +2,4 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: app.main:app
   aws:elasticbeanstalk:application:environment:
-    PYTHONPATH: "/var/app:/var/app/app"
+    PYTHONPATH: "/var/app"
