--- a/.ebextensions/02_healthcheck.config
+++ b/.ebextensions/02_healthcheck.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:application:
-    Application Healthcheck URL: /docs
+    Application Healthcheck URL: /
   aws:elasticbeanstalk:environment:process:default:
-    HealthCheckPath: /docs
+    HealthCheckPath: /
     MatcherHTTPCode: 200
