fix(proxy): correct vercel.json destination to avoid double /v1 in proxied API paths

--- a/pine-time-proxy/vercel.json
+++ b/pine-time-proxy/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "http://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com/api/v1/$1"
+      "destination": "http://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com/api/$1"
     }
   ]
 }
