--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "date-fns": "^4.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "react-markdown": "^10.1.0"
   }
 }
