fix: improve API configuration to prevent duplicate prefixes in production deployment

--- a/pine-time-frontend/.env.example
+++ b/pine-time-frontend/.env.example
@@ -1,6 +1,29 @@
+# Pine Time App Environment Configuration
+
 # API Configuration
 # NOTE: For development environment only. 
-# Production environment uses the config.ts file with the hardcoded API_BASE_URL
+# Production environment uses the config.ts file with hardcoded values
+
+# Base URL for API requests
+# Used only in development mode (automatically detected via import.meta.env.DEV)
+# If not set, will default to http://localhost:8000
+# IMPORTANT: This should be the base URL WITHOUT the /api/v1 prefix
+# The backend already includes the /api/v1 prefix in its routes
 VITE_API_BASE_URL=http://localhost:8000
 
-# Other environment variables can be added here
+# Authentication Configuration
+# JWT token settings (optional)
+VITE_AUTH_TOKEN_EXPIRY=3600
+
+# Feature Flags
+# Enable/disable features during development
+VITE_ENABLE_DEMO_MODE=false
+
+# Local Development Settings
+# Additional settings useful for development
+VITE_DISABLE_API_LOGGING=false
+VITE_MOCK_API_RESPONSES=false
+
+# NOTE: This file is used for reference only.
+# Create a .env.local file for your personal development settings.
+# .env.local is ignored by git and should not be committed.
