Update documentation with custom domain and Neon PostgreSQL connection details

--- a/eb-deployment/.ebextensions/04_environment.config
+++ b/eb-deployment/.ebextensions/04_environment.config
@@ -3,6 +3,7 @@ option_settings:
     DATABASE_TYPE: postgresql
     POSTGRES_SERVER: ep-black-sound-a13jwznd-pooler.ap-southeast-1.aws.neon.tech
     POSTGRES_USER: neondb_owner
+    POSTGRES_PASSWORD: npg_cFRDTZQ9kv3L
     POSTGRES_DB: neondb
     POSTGRES_PORT: 5432
     POSTGRES_SSL_MODE: require
@@ -14,4 +15,4 @@ option_settings:
     TOKEN_REFRESH_INTERVAL: 1800
     AUTH_RETRY_ATTEMPTS: 3
     AUTH_RETRY_DELAY: 2
-    BACKEND_CORS_ORIGINS: '["https://pine-time-app-env-v2.eba-xxx.us-east-1.elasticbeanstalk.com", "http://localhost:5173", "http://localhost:8000", "http://localhost:8501"]'
+    BACKEND_CORS_ORIGINS: '["https://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://localhost:5173", "http://localhost:8000", "http://localhost:8501", "https://pinetimeapp.com", "https://www.pinetimeapp.com", "http://pinetimeapp.com", "http://www.pinetimeapp.com"]'
