--- a/eb-deployment/.ebextensions/04_environment.config
+++ b/eb-deployment/.ebextensions/04_environment.config
@@ -15,4 +15,4 @@ option_settings:
     TOKEN_REFRESH_INTERVAL: 1800
     AUTH_RETRY_ATTEMPTS: 3
     AUTH_RETRY_DELAY: 2
-    BACKEND_CORS_ORIGINS: '["https://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://localhost:5173", "http://localhost:8000", "http://localhost:8501", "https://pinetimeapp.com", "https://www.pinetimeapp.com", "http://pinetimeapp.com", "http://www.pinetimeapp.com"]'
+    BACKEND_CORS_ORIGINS: '["https://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://pine-time-app-env-v2.eba-keu6sc2y.us-east-1.elasticbeanstalk.com", "http://localhost:5173", "http://localhost:8000", "http://localhost:8501", "https://pinetimeapp.com", "https://www.pinetimeapp.com", "http://pinetimeapp.com", "http://www.pinetimeapp.com", "https://api.pinetimeapp.com"]'
