--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.76.1",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "pg": "^8.14.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.0"
   }
 }
