--- a/amplify.yml
+++ b/amplify.yml
@@ -6,9 +6,9 @@ frontend:
         - nvm install 20
         - nvm use 20
         - cd pine-time-frontend
-        - npm ci
+        - npm install
         - cd ../pine-time-admin
-        - npm ci
+        - npm install
         - cd ..
     build:
       commands:
