fix(admin): Implement direct HTML route handling for admin dashboard
- Add client-side route normalization in index.html
- Create admin-redirect.html for handling problematic routes
- Update Amplify configuration to support new redirect approach
- Add comprehensive logging for path resolution debugging
- Implement direct path rewriting for proper dashboard loading

This approach bypasses React Router's complex path handling and directly
manages routes at the HTML level, ensuring consistent loading of the admin
dashboard in production environments with proper error handling and logging.

--- a/amplify.yml
+++ b/amplify.yml
@@ -56,7 +56,7 @@ frontend:
         - key: 'Cache-Control'
           value: 'public, max-age=31536000, immutable'
   routes:
-    # ADMIN DASHBOARD SPA ROUTING WITH HASHROUTER
+    # ADMIN DASHBOARD DIRECT HTML ROUTING
     # Explicitly route all admin dashboard assets
     - source: '/admin/assets/**/*'
       status: '200'
@@ -66,6 +66,9 @@ frontend:
       status: '200'
     - source: '/admin/'
       target: '/admin/index.html'
+      status: '200'
+    # Special redirect for problematic paths
+    - source: '/admin/admin-redirect.html'
       status: '200'
     # Critical fix: Any path under /admin must serve index.html
     # This ensures the SPA router handles all routes
