fix(admin): Implement emergency admin dashboard solution
- Created direct HTML admin dashboard without React dependencies

- Added proper error handling and API status checks

- Used Pine Time's color scheme and design patterns

- Completely bypassed router issues for immediate reliability

--- a/amplify.yml
+++ b/amplify.yml
@@ -25,9 +25,9 @@ frontend:
         # Copy admin build to main app dist/admin directory
         - cd ..
         - cp -r pine-time-admin/dist/* pine-time-frontend/dist/admin/
-        # TEMPORARY SOLUTION: Use standalone HTML to ensure admin dashboard works
-        # This is a reliable fallback until routing issues are fully resolved
-        - cp pine-time-admin/public/standalone-admin.html pine-time-frontend/dist/admin/index.html
+        # EMERGENCY FIX: Use direct admin-redirect.html as main admin dashboard
+        # This completely bypasses React Router and ensures a working admin interface
+        - cp pine-time-admin/public/admin-redirect.html pine-time-frontend/dist/admin/index.html
         # Ensure proper SPA routing with redirects
         - cp pine-time-admin/public/_redirects pine-time-frontend/dist/admin/
         # Debugging: List files to verify correct structure
